--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name='theme-color' content='#000000'>
   <link rel='manifest' href='%PUBLIC_URL%/manifest.json'>
   <title>Linked Data Store Client</title>
+  <script src="%PUBLIC_URL%/env.js"></script>
 </head>
 <body>
 <noscript>
